testing rpc between userService and authService